--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Urban Template
+title: bnbdata - We have the data to help you getting insights that make the difference.
 url: "http://bnbdata.co"
 baseurl: 
 google_analytics_key: UA-118130953-1
@@ -25,7 +25,7 @@ timezone: Etc/UTC
 collections:
   staff_members:
     output: false
-  clients:
+  products:
     output: true
 
 paginate: 10
@@ -60,9 +60,9 @@ defaults:
           height: 2000
   - scope:
       path: ""
-      type: "clients"
+      type: "products"
     values:
-      layout: "client"
+      layout: "product"
       _options:
         image_path:
           width: 2000
