--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 links:
 - name: Home
   link: /
-#- name: Products
-#  link: /products/
-#- name: Blog
-#  link: /blog/
+- name: Products
+  link: /products/
+- name: Blog
+  link: /blog/
 #- name: About
 #  link: /about/
 - name: Contact
