--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,12 +2,12 @@
   links:
     - name: Home
       link: /
-    - name: Products
-      link: /products/
-    - name: Blog
-      link: /blog/
-    - name: About
-      link: /about/
+    # - name: Products
+    #   link: /products/
+    # - name: Blog
+    #   link: /blog/
+    # - name: About
+    #   link: /about/
     - name: Contact
       link: /contact/
 # - title: Social
