fixed wrong name of site

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 author:
   name             : "Jens Laufer"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Chief Data Scientist @insights5"
+  bio              : "Chief Data Scientist @bnbdata"
   location         : "Karlstein a. Main, Germany"
   email            :
   uri              : "https://jenslaufer.com"
